Importando os dados pela URL RAW do Github

--- a/Notebooks/Aulas_2_e_3.ipynb
+++ b/Notebooks/Aulas_2_e_3.ipynb
@@ -13,7 +13,7 @@
         "En1T9WkMaMJc"
       ],
       "mount_file_id": "1NXR7rTEnCvvNDxnT_EGdEcJmrxO1gZGs",
-      "authorship_tag": "ABX9TyPgFwQwbKJ71Yl2QzWxj4ai",
+      "authorship_tag": "ABX9TyPaBCZ+jqGT85GGo6A2nhJj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,18 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CncbThD_48Qg"
+      },
+      "source": [
+        "URL = 'https://raw.githubusercontent.com/melesdea/Alura_Bootcamp_DS/main/Dados/A010140189_28_143_208.csv'"
+      ],
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -62,24 +73,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0zYVZzQpM2yB",
-        "outputId": "6b7f39ce-c9a9-451a-94e3-deb90fd74d94"
+        "outputId": "48f526d7-f9b8-4579-bcab-384243a2ef83"
       },
       "source": [
-        "dados = pd.read_csv(\"/content/drive/MyDrive/Cursos/Alura/Data Science - Bootcamp/Arquivos SUS/A010140189_28_143_208.csv\",\n",
-        "                    encoding=\"ISO-8859-1\",\n",
+        "dados = pd.read_csv(URL, encoding=\"ISO-8859-1\",\n",
         "                    skiprows = 3,\n",
         "                    skipfooter=12,\n",
         "                    sep=\";\",\n",
         "                    thousands=\".\",\n",
         "                    decimal=\",\")"
       ],
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
-            "  import sys\n"
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+            "  \n"
           ],
           "name": "stderr"
         }
@@ -105,12 +115,12 @@
           "height": 1000
         },
         "id": "_-euMtYYNBPE",
-        "outputId": "27d1d50a-f728-419b-98a1-6b832fb9cb6a"
+        "outputId": "9d74b2a9-7d3e-4005-aea0-52c2bb9040d8"
       },
       "source": [
         "dados"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2527,7 +2537,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -2544,7 +2554,7 @@
       "source": [
         "dados.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3108,7 +3118,7 @@
       "source": [
         "dados.tail()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3671,7 +3681,7 @@
       "source": [
         "dados.mean()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3710,7 +3720,7 @@
       "source": [
         "dados.info()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3733,7 +3743,7 @@
       "source": [
         "pd.options.display.float_format = \"{:.2f}\".format"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3748,7 +3758,7 @@
       "source": [
         "dados.mean()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3787,7 +3797,7 @@
       "source": [
         "dados[\"2008/Ago\"]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3843,7 +3853,7 @@
       "source": [
         "dados.plot()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3886,7 +3896,7 @@
         "dados.plot(\n",
         "    x=\"Unidade da Federação\", y=\"2008/Ago\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3931,7 +3941,7 @@
         "    kind=\"bar\",\n",
         "    figsize=(12,5))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3992,7 +4002,7 @@
         "ax.yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.2f}\"))\n",
         "plt.title(\"Valor por Unidade da Federação\")\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4046,7 +4056,7 @@
         "ax.yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.2f}\"))\n",
         "plt.title(\"Valores gastos em procedimentos hospitalares através do SUS por UF. Período: Agosto/2008\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4090,7 +4100,7 @@
         "ax.yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.2f}\"))\n",
         "plt.title(\"Valores gastos em procedimentos hospitalares através do SUS por UF. Período: Março/2021\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4141,7 +4151,7 @@
       "source": [
         "dados[[\"2008/Ago\", \"2008/Set\"]].head()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4232,15 +4242,14 @@
       "metadata": {
         "id": "5ivb7OyMrPw2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "164e376f-cfac-4fc6-b6f8-da2f3b0845cd"
       },
       "source": [
         "dados.head()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4803,7 +4812,7 @@
       "source": [
         "dados.mean()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4844,7 +4853,7 @@
         "colunas_usaveis.insert(0, \"Unidade da Federação\")\n",
         "colunas_usaveis"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5052,7 +5061,7 @@
         "usaveis = dados[colunas_usaveis]\n",
         "usaveis.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5627,7 +5636,7 @@
         "usaveis = usaveis.set_index(\"Unidade da Federação\")\n",
         "usaveis"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8145,7 +8154,7 @@
       "source": [
         "usaveis[\"2019/Ago\"].head()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8179,7 +8188,7 @@
       "source": [
         "usaveis.loc[\"12 Acre\"]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8219,7 +8228,7 @@
       "source": [
         "usaveis.plot(figsize=(12,6))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8261,7 +8270,7 @@
       "source": [
         "usaveis.head()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8910,8 +8919,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "o7yWwV8UYr1U",
         "outputId": "98cda27d-a99e-4079-fbba-497a8d0e439e"
@@ -8919,7 +8927,7 @@
       "source": [
         "usaveis.T.tail()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9149,8 +9157,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "AjGRIhnzY5qc",
         "outputId": "2bf9e663-08bf-45a9-da15-3d0c3771341b"
@@ -9158,7 +9165,7 @@
       "source": [
         "usaveis.T.plot(figsize=(10,6))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9204,7 +9211,7 @@
       "source": [
         "usaveis = usaveis.drop(\"Total\", axis=1)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9220,8 +9227,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ymQ_mr9lafxK",
         "outputId": "fc177b82-d572-4dad-fb3c-bcb7b72ec378"
@@ -9229,7 +9235,7 @@
       "source": [
         "usaveis.head()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9869,8 +9875,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XRivK7A7cbyc",
         "outputId": "77c4f65b-3563-49c1-d95e-06051429e794"
@@ -9878,7 +9883,7 @@
       "source": [
         "usaveis.tail()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10518,8 +10523,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9doFXMqIay9x",
         "outputId": "de800a56-5850-426d-95f5-5fbe11e4959a"
@@ -10527,7 +10531,7 @@
       "source": [
         "usaveis.T.plot(figsize=(10,6))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10581,7 +10585,7 @@
         "plt.title(\"Valores gastos em procedimentos hospitalares através do SUS por UF de acordo com Ano/Mês de atendimento. Período: 2007/Ago a 2021/Março.\")\n",
         "ax.legend(loc = 'upper right', bbox_to_anchor=(1.25, 1.), title= 'Unidade Federativa')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10627,7 +10631,7 @@
       "source": [
         "usaveis_estados_selecionados = usaveis.loc[[\"35 São Paulo\", \"53 Distrito Federal\", \"14 Roraima\", \"43 Rio Grande do Sul\", \"25 Paraíba\"]]\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10646,7 +10650,7 @@
         "plt.title(\"Valores gastos em procedimentos hospitalares através do SUS por UF de acordo com Ano/Mês de atendimento. Período: 2008/Jan a 2019/Out.\")\n",
         "ax.legend(loc = 'best', title= 'Unidade Federativa')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10700,7 +10704,7 @@
         "ax.yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.2f}\"))\n",
         "plt.title(\"Valores gastos em procedimentos hospitalares através do SUS por UF de acordo com Ano/Mês de atendimento. Período: 2008/Jan a 2019/Out.\")"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10741,7 +10745,7 @@
       "source": [
         "usaveis.T.columns"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10776,7 +10780,7 @@
       "source": [
         "usaveis.columns"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10809,7 +10813,7 @@
       "source": [
         "usaveis.index"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10844,7 +10848,7 @@
       "source": [
         "usaveis.T.columns[1:4]"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10872,7 +10876,7 @@
       "source": [
         "usaveis.T.columns[10:20]"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10908,7 +10912,7 @@
         "ax.legend(loc = 'upper right', bbox_to_anchor=(1.25, 1.), title= 'Unidade Federativa')\n",
         "df"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
