Pegando os dados pela URL RAW pelo Github

--- a/Notebooks/Bootcamp_DS_Aula_1.ipynb
+++ b/Notebooks/Bootcamp_DS_Aula_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Bootcamp DS - Aula 1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtb6+pQliuPkwzOnl1tUAF",
+      "authorship_tag": "ABX9TyOUxC3JWs578z98DyWNe0wR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +29,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VGuHnH8TotYg"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "WoJTjoIpMDns"
@@ -56,7 +45,18 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uh-3tRnevUk0"
+      },
+      "source": [
+        "URL = 'https://raw.githubusercontent.com/melesdea/Alura_Bootcamp_DS/main/Dados/A164248189_28_143_208.csv'"
+      ],
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -66,14 +66,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0zYVZzQpM2yB",
-        "outputId": "3a6444f1-1d53-4194-a845-322623ddb637"
+        "outputId": "613cbce4-df70-4b86-b8ad-bb9d5d67fe00"
       },
       "source": [
-        "dados = pd.read_csv(\"/content/A164248189_28_143_208.csv\", encoding=\"ISO-8859-1\",\n",
+        "dados = pd.read_csv(URL, encoding=\"ISO-8859-1\",\n",
         "                    skiprows = 3, sep=\";\", skipfooter=12,\n",
         "                    thousands=\".\", decimal=\",\")"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,12 +93,12 @@
           "height": 1000
         },
         "id": "mOT9LHOautfl",
-        "outputId": "3245bb14-5fab-4908-9a11-64c98b67d692"
+        "outputId": "e4f9a64d-078e-452e-b552-763fa2478162"
       },
       "source": [
         "dados"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2515,7 +2515,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 13
         }
       ]
     },
@@ -2527,7 +2527,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     }
   ]
